syntax/src/snapshots/syntax__parse__tests__parse_num.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Lit(
                Num(
                    Ratio {
                        numer: 1,
                        denom: 1,
                    },
                ),
            ),
        ) @ 0..1,
    ],
} @ 0..1
