syntax/src/snapshots/syntax__parse__tests__parse_paren.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Infix {
                op: Mul @ 8..9,
                lhs: Infix {
                    op: Add @ 3..4,
                    lhs: Ident(
                        InternedString(x),
                    ) @ 1..2,
                    rhs: Ident(
                        InternedString(y),
                    ) @ 5..6,
                } @ 0..7,
                rhs: Ident(
                    InternedString(z),
                ) @ 10..11,
            },
        ) @ 0..11,
    ],
} @ 0..11
