syntax/src/snapshots/syntax__parse__tests__parse_prefix.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Prefix {
                op: Neg @ 0..1,
                expr: Ident(
                    InternedString(x),
                ) @ 1..2,
            },
        ) @ 0..2,
    ],
} @ 0..2
