syntax/src/snapshots/syntax__parse__tests__parse_unit.snap
---
source: syntax/src/parse.rs
expression: root.unwrap()
---
Root {
    items: [
        Expr(
            Unit,
        ) @ 0..2,
    ],
} @ 0..2
